@@ -4,10 +4,11 @@ import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.Calendar;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import javax.faces.application.FacesMessage;
 import javax.faces.bean.ManagedBean;
@@ -21,6 +22,7 @@ import ch.ivyteam.enginecockpit.download.AllResourcesDownload;
 import ch.ivyteam.enginecockpit.monitor.model.LogView;
 import ch.ivyteam.enginecockpit.util.DownloadUtil;
 import ch.ivyteam.enginecockpit.util.UrlUtil;
+import ch.ivyteam.ivy.elasticsearch.IElasticsearchManager;
 
 @ManagedBean
 @ViewScoped
@@ -44,16 +46,33 @@ public class LogBean implements AllResourcesDownload {
 
   private void initLogFiles() {
     try {
-      logs = Files.walk(UrlUtil.getLogDir().toRealPath())
-              .filter(Files::isRegularFile)
-              .filter(log -> log.toString().endsWith(".log"))
-              .map(log -> new LogView(log.getFileName().toString(), date))
-              .sorted()
-              .collect(Collectors.toList());
+      logs = Stream.concat(
+        getLogs(UrlUtil.getLogDir().toRealPath()),
+        getElasticsearchLogs()
+      ).toList();
     } catch (IOException ex) {
       FacesContext.getCurrentInstance().addMessage("msgs",
               new FacesMessage(FacesMessage.SEVERITY_ERROR, "Could not load logs", ex.getMessage()));
     }
+  }
+
+  private Stream<LogView> getElasticsearchLogs() throws IOException {
+    var clusterName = IElasticsearchManager.instance().info().clusterName();
+    return getLogFiles(UrlUtil.getElasticsearchLogDir())
+            .map(Path::getFileName)
+            .filter(log -> log.toString().startsWith(clusterName))
+            .map(log -> new LogView("elasticsearch" + log.getFileName().toString().substring(clusterName.length()), date));
+  }
+
+  private Stream<LogView> getLogs(Path path) throws IOException {
+    return getLogFiles(path).map(log -> new LogView(log.getFileName().toString(), date));
+}
+
+  private Stream<Path> getLogFiles(Path path) throws IOException {
+    return Files.exists(path) ? Files.walk(path)
+            .filter(Files::isRegularFile)
+            .filter(log -> log.toString().endsWith(".log"))
+            : Stream.empty();
   }
 
   public List<LogView> getLogs() {
